[package]
name = "wrapping_arithmetic"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/wrapping.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "extra-traits"]}
quote = "1.0"
