[package]
name = "wrapping_arithmetic"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
repository = "https://github.com/franziskuskiefer/wrapping-arithmetic"
keywords = ["crypto", "arithmetic"]
license = "Apache-2.0"
readme = "README.md"
description = "Proc macro #[wrappit] to rewrite operators into their wrapping equivalents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/wrapping.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "extra-traits"]}
quote = "1.0"
